--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Alarm Clock</title>
+
+  <marquee>Works with Mozilla Firefox And Internet Explorer Not with Google chrome</marquee>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -30,7 +32,7 @@
 						<div class='back'></div>
 					</div>
 				</div>
-				
+
 				<input type='checkbox' />
 			</div>
 		</li>-->
