--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Alarm Clock</title>
 
-  <marquee>Works with Mozilla Firefox And Internet Explorer Not with Google chrome</marquee>
+  <marquee>Works with Mozilla Firefox And Internet Explorer Not with Google chrome and Use 24 Hour Clock</marquee>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 	<meta name="apple-mobile-web-app-capable" content="yes">
